Update build workflow for Xiaomi Pad 6

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,129 +3,203 @@ on:
   push: # Build when push
   workflow_dispatch:
   schedule:
-    - cron: '0 0 * * 5' # Start build every friday
+  - cron: '0 0 * * 5' # Start build every friday
 
 jobs:
   build-image:
     strategy:
       matrix:
-        version: ["default"]
+        version: [ "default" ]
 
     runs-on: ubuntu-latest
     steps:
-      - name: Check out build configurations
-        uses: actions/checkout@v4
+    - name: Check out build configurations
+      uses: actions/checkout@v4
 
-      - name: Set current date variable
-        run: echo "CURRENT_DATE=$(date +%Y-%m-%d)" >> $GITHUB_ENV
-        
-      - name: Create artifact directory
-        run: |
-            mkdir out
-        
-      - name: Substitute placeholders in configs
-        run: |
-           find . -type f -name "*.cfg" -exec sed -i "s|HOME|$(echo $HOME)|;s|NPROC|$(nproc)|" {} +
+    - name: Set current date variable
+      run: echo "CURRENT_DATE=$(date +%Y-%m-%d)" >> $GITHUB_ENV
 
-      - name: Install pmbootstrap from git
-        run: |
-          git clone --depth=1 https://gitlab.postmarketos.org/postmarketOS/pmbootstrap.git
-          mkdir -p ~/.local/bin
-          ln -s "$PWD/pmbootstrap/pmbootstrap.py" ~/.local/bin/pmbootstrap
-          pmbootstrap --version
+    - name: Create artifact directory
+      run: |
+        mkdir out
 
-      - name: Set up pmaports
-        run: |
-          echo -e '\n\n' | pmbootstrap init || true
-          cd ~/.local/var/pmbootstrap/cache_git/pmaports
-          git remote
-          git remote add pipa https://github.com/rifux/pipa-pmaports.git
-          git fetch pipa v25.06
-          git reset --hard pipa/v25.06
+    - name: Substitute placeholders in configs
+      run: |
+        find . -type f -name "*.cfg" -exec sed -i "s|HOME|$(echo $HOME)|;s|NPROC|$(nproc)|" {} +
 
-      - name: Build the xiaomi-pipa without DE
-        run: |
-           cp xiaomi-pipa.cfg ~/.config/pmbootstrap_v3.cfg
-           pmbootstrap install --password 147147
-           pmbootstrap export
-           cp /tmp/postmarketOS-export/boot.img out/boot-xiaomi-pipa.img
-           cp /tmp/postmarketOS-export/xiaomi-pipa.img out/rootfs-xiaomi-pipa-none.img
+    - name: Install pmbootstrap from git
+      run: |
+        git clone --depth=1 https://gitlab.postmarketos.org/postmarketOS/pmbootstrap.git
+        mkdir -p ~/.local/bin
+        ln -s "$PWD/pmbootstrap/pmbootstrap.py" ~/.local/bin/pmbootstrap
+        pmbootstrap --version
 
-      - name: Breakpoint if tests failed for xiaomi-pipa without DE
-        if: failure()
-        uses: namespacelabs/breakpoint-action@v0
-        with:
-          duration: 30m
-          authorized-users: rifux
-      
-      - name: Upload artifacts xiaomi-pipa without DE
-        uses: actions/upload-artifact@v4
-        with:
-           name: xiaomi-pipa-none_${{ env.CURRENT_DATE }}
-           path: out/*.img*
-           retention-days: 7
+    - name: Set up pmaports
+      run: |
+        echo -e '\n\n' | pmbootstrap init || true
+        cd ~/.local/var/pmbootstrap/cache_git/pmaports
+        git remote
+        git remote add pipa https://github.com/rifux/pipa-pmaports.git
+        git fetch pipa v25.06
+        git reset --hard pipa/v25.06
 
-      - name: Build the xiaomi-pipa with KDE Plasma Desktop
-        run: |
-           yes | pmbootstrap zap
-           rm -r out/*
-           pmbootstrap install --password 147147 --add postmarketos-ui-plasma-desktop
-           cat /home/runner/.local/var/pmbootstrap/log.txt
-           pmbootstrap export
-           cp /tmp/postmarketOS-export/boot.img out/boot-xiaomi-pipa.img
-           cp /tmp/postmarketOS-export/xiaomi-pipa.img out/rootfs-xiaomi-pipa-plasma.img
+    - name: Build the xiaomi-pipa without DE
+      run: |
+        cp xiaomi-pipa.cfg ~/.config/pmbootstrap_v3.cfg
+        pmbootstrap checksum device-xiaomi-pipa
+        pmbootstrap checksum firmware-xiaomi-pipa
+        pmbootstrap checksum linux-postmarketos-qcom-sm8250-pipa
+        pmbootstrap chroot -- apk add zstd
+        pmbootstrap install --password 147147
+        pmbootstrap export
+        cp /tmp/postmarketOS-export/boot.img out/boot-xiaomi-pipa.img
+        cp /tmp/postmarketOS-export/xiaomi-pipa.img out/rootfs-xiaomi-pipa-none.img
 
-      - name: Breakpoint if tests failed for xiaomi-pipa with KDE Plasma Desktop
-        if: failure()
-        uses: namespacelabs/breakpoint-action@v0
-        with:
-          duration: 30m
-          authorized-users: rifux
-      
-      - name: Upload artifacts xiaomi-pipa with KDE Plasma Desktop
-        uses: actions/upload-artifact@v4
-        with:
-           name: xiaomi-pipa-plasma_${{ env.CURRENT_DATE }}
-           path: out/*.img*
-           retention-days: 7
-            
-      - name: Build the xiaomi-pipa with GNOME
-        run: |
-           yes | pmbootstrap zap
-           rm -r out/*
-           pmbootstrap install --password 147147 --add postmarketos-ui-gnome
-           pmbootstrap export
-           cp /tmp/postmarketOS-export/boot.img out/boot-xiaomi-pipa.img
-           cp /tmp/postmarketOS-export/xiaomi-pipa.img out/rootfs-xiaomi-pipa-gnome.img
+    - name: Show log
+      if: always()
+      run: |
+        cat /home/runner/.local/var/pmbootstrap/log.txt
 
-      - name: Breakpoint if tests failed for xiaomi-pipa with GNOME
-        if: failure()
-        uses: namespacelabs/breakpoint-action@v0
-        with:
-          duration: 30m
-          authorized-users: rifux
-            
-      - name: Upload artifacts xiaomi-pipa with GNOME
-        uses: actions/upload-artifact@v4
-        with:
-           name: xiaomi-pipa-gnome_${{ env.CURRENT_DATE }}
-           path: out/*.img*
-           retention-days: 7
-                       
-      - name: Copy xiaomi-pipa kernel
-        run: |
-           rm -r out/*
-           cp ~/.local/var/pmbootstrap/packages/v25.06/aarch64/linux-postmarketos-qcom-sm8250-pipa-*.apk out/
-      
-      - name: Upload artifacts xiaomi-pipa kernel
-        uses: actions/upload-artifact@v4
-        with:
-           name: xiaomi-pipa-kernel_${{ env.CURRENT_DATE }}
-           path: out/*.apk
-           retention-days: 7
+    - name: Breakpoint if tests failed for xiaomi-pipa without DE
+      if: failure()
+      uses: namespacelabs/breakpoint-action@v0
+      with:
+        duration: 30m
+        authorized-users: rifux
 
+    - name: Upload artifacts xiaomi-pipa without DE
+      uses: actions/upload-artifact@v4
+      with:
+        name: xiaomi-pipa-none_${{ env.CURRENT_DATE }}
+        path: out/*.img*
+        retention-days: 7
 
+    - name: Build the xiaomi-pipa with KDE Plasma Desktop
+      run: |
+        yes | pmbootstrap zap
+        rm -r out/*
+        pmbootstrap install --password 147147 --add postmarketos-ui-plasma-desktop
+        cat /home/runner/.local/var/pmbootstrap/log.txt
+        pmbootstrap export
+        cp /tmp/postmarketOS-export/boot.img out/boot-xiaomi-pipa.img
+        cp /tmp/postmarketOS-export/xiaomi-pipa.img out/rootfs-xiaomi-pipa-plasma.img
 
-        
+    - name: Breakpoint if tests failed for xiaomi-pipa with KDE Plasma Desktop
+      if: failure()
+      uses: namespacelabs/breakpoint-action@v0
+      with:
+        duration: 30m
+        authorized-users: rifux
 
-        
+    - name: Upload artifacts xiaomi-pipa with KDE Plasma Desktop
+      uses: actions/upload-artifact@v4
+      with:
+        name: xiaomi-pipa-plasma_${{ env.CURRENT_DATE }}
+        path: out/*.img*
+        retention-days: 7
+
+    - name: Build the xiaomi-pipa with KDE Plasma Mobile
+      run: |
+        yes | pmbootstrap zap
+        rm -r out/*
+        pmbootstrap install --password 147147 --add postmarketos-ui-plasma-mobile
+        cat /home/runner/.local/var/pmbootstrap/log.txt
+        pmbootstrap export
+        cp /tmp/postmarketOS-export/boot.img out/boot-xiaomi-pipa.img
+        cp /tmp/postmarketOS-export/xiaomi-pipa.img out/rootfs-xiaomi-pipa-plasma-mobile.img
+
+    - name: Breakpoint if tests failed for xiaomi-pipa with KDE Plasma Mobile
+      if: failure()
+      uses: namespacelabs/breakpoint-action@v0
+      with:
+        duration: 30m
+        authorized-users: rifux
+
+    - name: Upload artifacts xiaomi-pipa with KDE Plasma Mobile
+      uses: actions/upload-artifact@v4
+      with:
+        name: xiaomi-pipa-plasma_mobile_${{ env.CURRENT_DATE }}
+        path: out/*.img*
+        retention-days: 7
+
+    - name: Build the xiaomi-pipa with Lomiri
+      run: |
+        yes | pmbootstrap zap
+        rm -r out/*
+        pmbootstrap install --password 147147 --add postmarketos-ui-lomiri
+        cat /home/runner/.local/var/pmbootstrap/log.txt
+        pmbootstrap export
+        cp /tmp/postmarketOS-export/boot.img out/boot-xiaomi-pipa.img
+        cp /tmp/postmarketOS-export/xiaomi-pipa.img out/rootfs-xiaomi-pipa-lomiri.img
+
+    - name: Breakpoint if tests failed for xiaomi-pipa with Lomiri
+      if: failure()
+      uses: namespacelabs/breakpoint-action@v0
+      with:
+        duration: 30m
+        authorized-users: rifux
+
+    - name: Upload artifacts xiaomi-pipa with Lomiri
+      uses: actions/upload-artifact@v4
+      with:
+        name: xiaomi-pipa-lomiri_${{ env.CURRENT_DATE }}
+        path: out/*.img*
+        retention-days: 7
+
+    - name: Build the xiaomi-pipa with GNOME
+      run: |
+        yes | pmbootstrap zap
+        rm -r out/*
+        pmbootstrap install --password 147147 --add postmarketos-ui-gnome
+        pmbootstrap export
+        cp /tmp/postmarketOS-export/boot.img out/boot-xiaomi-pipa.img
+        cp /tmp/postmarketOS-export/xiaomi-pipa.img out/rootfs-xiaomi-pipa-gnome.img
+
+    - name: Breakpoint if tests failed for xiaomi-pipa with GNOME
+      if: failure()
+      uses: namespacelabs/breakpoint-action@v0
+      with:
+        duration: 30m
+        authorized-users: rifux
+
+    - name: Upload artifacts xiaomi-pipa with GNOME
+      uses: actions/upload-artifact@v4
+      with:
+        name: xiaomi-pipa-gnome_${{ env.CURRENT_DATE }}
+        path: out/*.img*
+        retention-days: 7
+
+    - name: Build the xiaomi-pipa with GNOME Mobile
+      run: |
+        yes | pmbootstrap zap
+        rm -r out/*
+        pmbootstrap install --password 147147 --add postmarketos-ui-gnome-mobile
+        pmbootstrap export
+        cp /tmp/postmarketOS-export/boot.img out/boot-xiaomi-pipa.img
+        cp /tmp/postmarketOS-export/xiaomi-pipa.img out/rootfs-xiaomi-pipa-gnome-mobile.img
+
+    - name: Breakpoint if tests failed for xiaomi-pipa with GNOME Mobile
+      if: failure()
+      uses: namespacelabs/breakpoint-action@v0
+      with:
+        duration: 30m
+        authorized-users: rifux
+
+    - name: Upload artifacts xiaomi-pipa with GNOME Mobile
+      uses: actions/upload-artifact@v4
+      with:
+        name: xiaomi-pipa-gnome-mobile_${{ env.CURRENT_DATE }}
+        path: out/*.img*
+        retention-days: 7
+
+    - name: Copy xiaomi-pipa kernel
+      run: |
+        rm -r out/*
+        cp ~/.local/var/pmbootstrap/packages/v25.06/aarch64/linux-postmarketos-qcom-sm8250-pipa-*.apk out/
+
+    - name: Upload artifacts xiaomi-pipa kernel
+      uses: actions/upload-artifact@v4
+      with:
+        name: xiaomi-pipa-kernel_${{ env.CURRENT_DATE }}
+        path: out/*.apk
+        retention-days: 7
